Closed Bug 1594960 Opened 5 years ago Closed 5 years ago

Assertion failure: HasMotionPathAnimations(aAnimations), at src/gfx/layers/AnimationHelper.cpp:494

Categories

(Core :: CSS Transitions and Animations, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla72
Tracking Status
firefox-esr68 --- unaffected
firefox70 --- unaffected
firefox71 --- unaffected
firefox72 --- fixed

People

(Reporter: tsmith, Assigned: boris)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: assertion, regression, testcase)

Attachments

(2 files)

Attached file testcase.html

Reduced with m-c:
BuildID=20191107230801
SourceStamp=ac63c8962183502a4b0ec32222efc67d3841d157

Please let me know if a Pernosco session would be helpful.

Assertion failure: HasMotionPathAnimations(aAnimations), at src/gfx/layers/AnimationHelper.cpp:494

#0 mozilla::layers::AnimationHelper::ExtractAnimations(nsTArray<mozilla::layers::Animation> const&) src/gfx/layers/AnimationHelper.cpp:492:9
#1 mozilla::layers::AnimationInfo::SetCompositorAnimations(mozilla::layers::CompositorAnimations const&) src/gfx/layers/AnimationInfo.cpp:82:7
#2 mozilla::layers::Layer::SetCompositorAnimations(mozilla::layers::CompositorAnimations const&) src/gfx/layers/Layers.cpp:196:18
#3 mozilla::layers::LayerTransactionParent::SetLayerAttributes(mozilla::layers::OpSetLayerAttributes const&) src/gfx/layers/ipc/LayerTransactionParent.cpp:541:10
#4 mozilla::layers::LayerTransactionParent::RecvUpdate(mozilla::layers::TransactionInfo const&) src/gfx/layers/ipc/LayerTransactionParent.cpp:441:10
#5 mozilla::layers::PLayerTransactionParent::OnMessageReceived(IPC::Message const&) src/obj-firefox/ipc/ipdl/PLayerTransactionParent.cpp:125:66
#6 mozilla::layers::PCompositorManagerParent::OnMessageReceived(IPC::Message const&) src/obj-firefox/ipc/ipdl/PCompositorManagerParent.cpp:197:32
#7 mozilla::ipc::MessageChannel::DispatchAsyncMessage(mozilla::ipc::ActorLifecycleProxy*, IPC::Message const&) src/ipc/glue/MessageChannel.cpp:2208:25
#8 mozilla::ipc::MessageChannel::DispatchMessage(IPC::Message&&) src/ipc/glue/MessageChannel.cpp:2130:9
#9 mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::MessageChannel::MessageTask&) src/ipc/glue/MessageChannel.cpp:1972:3
#10 mozilla::ipc::MessageChannel::MessageTask::Run() src/ipc/glue/MessageChannel.cpp:2003:13
#11 MessageLoop::RunTask(already_AddRefed<nsIRunnable>) src/ipc/chromium/src/base/message_loop.cc:442:9
#12 MessageLoop::DeferOrRunPendingTask(MessageLoop::PendingTask&&) src/ipc/chromium/src/base/message_loop.cc:450:5
#13 MessageLoop::DoWork() src/ipc/chromium/src/base/message_loop.cc:523:13
#14 base::MessagePumpDefault::Run(base::MessagePump::Delegate*) src/ipc/chromium/src/base/message_pump_default.cc:35:31
#15 MessageLoop::RunInternal() src/ipc/chromium/src/base/message_loop.cc:315:10
#16 MessageLoop::Run() src/ipc/chromium/src/base/message_loop.cc:290:3
#17 base::Thread::ThreadMain() src/ipc/chromium/src/base/thread.cc:192:16
#18 ThreadFunc(void*) src/ipc/chromium/src/base/platform_thread_posix.cc:40:13
#19 start_thread (/lib/x86_64-linux-gnu/libpthread.so.0+0x76b9)
#20 clone /build/glibc-LK5gWL/glibc-2.23/misc/../sysdeps/unix/sysv/linux/x86_64/clone.S:109
Flags: in-testsuite?
Priority: -- → P3
Regressed by: 1429305

Moving to CSS Transitions and Animations.

Component: Graphics: Layers → CSS Transitions and Animations

Oh this was caused by bug 1592787?

I think yes. Should be easy to fix.

Assignee: nobody → boris.chiou

It's possible to have a fixed offset-path together with other animating
css transform properties or offset-* properties, so we don't have to add
this assertion.

Attachment #9107399 - Attachment description: Bug 1594960 - Drop the assertion to check the motion path animations on the compositor when we have fixed offset-path. → Bug 1594960 - Update the assertion to check the transform-like animations on the compositor when we have fixed offset-path.
Pushed by bchiou@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1a964a2674d3 Update the assertion to check the transform-like animations on the compositor when we have fixed offset-path. r=hiro
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72
Flags: in-testsuite? → in-testsuite+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: