Bug 1594960 - Update the assertion to check the transform-like animations on the compositor when we have fixed offset-path. r=hiro

It's possible to have a fixed offset-path together with other animating
css transform properties or offset-* properties, so we have to update
this assertion.

Differential Revision: https://phabricator.services.mozilla.com/D52296